--- a/TextRpgProject/TextRpgProject.vcxproj
+++ b/TextRpgProject/TextRpgProject.vcxproj
@@ -127,10 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharacterManager.cpp" />
     <ClCompile Include="CharacterObserver.cpp" />
+    <ClCompile Include="FireBall.cpp" />
+    <ClCompile Include="IceStorm.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mateor.cpp" />
+    <ClCompile Include="SkillManager.cpp" />
+    <ClCompile Include="Sparata.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
@@ -141,6 +147,8 @@
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="SingleTon.h" />
+    <ClInclude Include="Skill.h" />
+    <ClInclude Include="SkillManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
