--- a/TextRpgProject/TextRpgProject.vcxproj
+++ b/TextRpgProject/TextRpgProject.vcxproj
@@ -130,45 +130,83 @@
     <ClCompile Include="Battle.cpp" />
     <ClCompile Include="BattleManager.cpp" />
     <ClCompile Include="Bomb.cpp" />
+    <ClCompile Include="Box.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="CharacterManager.cpp" />
     <ClCompile Include="CharacterObserver.cpp" />
+    <ClCompile Include="Container.cpp" />
+    <ClCompile Include="Cursor.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="FactoryManager.cpp" />
     <ClCompile Include="FireBall.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="GameMap.cpp" />
     <ClCompile Include="Goblin.cpp" />
     <ClCompile Include="GoldenGoblin.cpp" />
     <ClCompile Include="Human.cpp" />
     <ClCompile Include="IceStorm.cpp" />
+    <ClCompile Include="InputBox.cpp" />
+    <ClCompile Include="Item.cpp" />
+    <ClCompile Include="LogBox.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mateor.cpp" />
     <ClCompile Include="MonsterManager.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Orc.cpp" />
+    <ClCompile Include="Pawn.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerManager.cpp" />
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Singleton.cpp" />
     <ClCompile Include="SkillManager.cpp" />
     <ClCompile Include="Slime.cpp" />
     <ClCompile Include="Sparata.cpp" />
+    <ClCompile Include="TextBox.cpp" />
+    <ClCompile Include="TradeManager.cpp" />
     <ClCompile Include="Troll.cpp" />
+    <ClCompile Include="Util.cpp" />
+    <ClCompile Include="Validator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Battle.h" />
     <ClInclude Include="BattleManager.h" />
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="CharacterManager.h" />
     <ClInclude Include="CharacterObserver.h" />
+    <ClInclude Include="Container.h" />
+    <ClInclude Include="Cursor.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="FactoryManager.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="GameMap.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="GoldenGoblin.h" />
     <ClInclude Include="Human.h" />
+    <ClInclude Include="InputBox.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="LogBox.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterManager.h" />
     <ClInclude Include="MonsterType.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Orc.h" />
+    <ClInclude Include="Pawn.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Random.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="SingleTon.h" />
     <ClInclude Include="Skill.h" />
     <ClInclude Include="SkillManager.h" />
     <ClInclude Include="Slime.h" />
+    <ClInclude Include="struct.h" />
+    <ClInclude Include="TextBox.h" />
+    <ClInclude Include="TradeManager.h" />
     <ClInclude Include="Troll.h" />
+    <ClInclude Include="UIStruct.h" />
+    <ClInclude Include="Util.h" />
+    <ClInclude Include="Validator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
