--- a/TextRpgProject/TextRpgProject.vcxproj.filters
+++ b/TextRpgProject/TextRpgProject.vcxproj.filters
@@ -42,15 +42,6 @@
     <ClCompile Include="BattleManager.cpp">
       <Filter>매니저</Filter>
     </ClCompile>
-    <ClCompile Include="Entity.cpp">
-      <Filter>엔티티</Filter>
-    </ClCompile>
-    <ClCompile Include="Item.cpp">
-      <Filter>엔티티</Filter>
-    </ClCompile>
-    <ClCompile Include="Pawn.cpp">
-      <Filter>엔티티</Filter>
-    </ClCompile>
     <ClCompile Include="Goblin.cpp">
       <Filter>엔티티</Filter>
     </ClCompile>
@@ -65,33 +56,6 @@
     </ClCompile>
     <ClCompile Include="Troll.cpp">
       <Filter>엔티티</Filter>
-    </ClCompile>
-    <ClCompile Include="Object.cpp">
-      <Filter>유저인터페이스</Filter>
-    </ClCompile>
-    <ClCompile Include="Cursor.cpp">
-      <Filter>유저인터페이스</Filter>
-    </ClCompile>
-    <ClCompile Include="Renderer.cpp">
-      <Filter>유저인터페이스</Filter>
-    </ClCompile>
-    <ClCompile Include="Util.cpp">
-      <Filter>유틸리티</Filter>
-    </ClCompile>
-    <ClCompile Include="Validator.cpp">
-      <Filter>유틸리티</Filter>
-    </ClCompile>
-    <ClCompile Include="Box.cpp">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClCompile>
-    <ClCompile Include="Container.cpp">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClCompile>
-    <ClCompile Include="TextBox.cpp">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClCompile>
-    <ClCompile Include="GameMap.cpp">
-      <Filter>맵</Filter>
     </ClCompile>
     <ClCompile Include="Battle.cpp">
       <Filter>소스 파일</Filter>
@@ -114,12 +78,6 @@
     <ClCompile Include="Sparata.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="InputBox.cpp">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClCompile>
-    <ClCompile Include="LogBox.cpp">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClCompile>
     <ClCompile Include="CharacterManager.cpp">
       <Filter>매니저</Filter>
     </ClCompile>
@@ -132,6 +90,66 @@
     <ClCompile Include="SkillManager.cpp">
       <Filter>매니저</Filter>
     </ClCompile>
+    <ClCompile Include="GoldenGoblin.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Box.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Container.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Cursor.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="FactoryManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="GameMap.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="InputBox.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Item.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="LogBox.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Pawn.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Singleton.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TextBox.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TradeManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Util.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Validator.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameManager.h">
@@ -143,13 +161,7 @@
     <ClInclude Include="Singleton.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Entity.h">
-      <Filter>엔티티</Filter>
-    </ClInclude>
     <ClInclude Include="Item.h">
-      <Filter>엔티티</Filter>
-    </ClInclude>
-    <ClInclude Include="Pawn.h">
       <Filter>엔티티</Filter>
     </ClInclude>
     <ClInclude Include="Goblin.h">
@@ -166,36 +178,6 @@
     </ClInclude>
     <ClInclude Include="Troll.h">
       <Filter>엔티티</Filter>
-    </ClInclude>
-    <ClInclude Include="Cursor.h">
-      <Filter>유저인터페이스</Filter>
-    </ClInclude>
-    <ClInclude Include="Object.h">
-      <Filter>유저인터페이스</Filter>
-    </ClInclude>
-    <ClInclude Include="Renderer.h">
-      <Filter>유저인터페이스</Filter>
-    </ClInclude>
-    <ClInclude Include="UIStruct.h">
-      <Filter>유저인터페이스</Filter>
-    </ClInclude>
-    <ClInclude Include="Util.h">
-      <Filter>유틸리티</Filter>
-    </ClInclude>
-    <ClInclude Include="Validator.h">
-      <Filter>유틸리티</Filter>
-    </ClInclude>
-    <ClInclude Include="Box.h">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClInclude>
-    <ClInclude Include="Container.h">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClInclude>
-    <ClInclude Include="TextBox.h">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClInclude>
-    <ClInclude Include="GameMap.h">
-      <Filter>맵</Filter>
     </ClInclude>
     <ClInclude Include="Battle.h">
       <Filter>헤더 파일</Filter>
@@ -215,12 +197,6 @@
     <ClInclude Include="Skill.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="InputBox.h">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClInclude>
-    <ClInclude Include="LogBox.h">
-      <Filter>유저인터페이스\박스</Filter>
-    </ClInclude>
     <ClInclude Include="CharacterManager.h">
       <Filter>매니저</Filter>
     </ClInclude>
@@ -232,6 +208,66 @@
     </ClInclude>
     <ClInclude Include="SkillManager.h">
       <Filter>매니저</Filter>
+    </ClInclude>
+    <ClInclude Include="GoldenGoblin.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Box.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Container.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Cursor.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="FactoryManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameMap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="InputBox.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="LogBox.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Pawn.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="struct.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TextBox.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TradeManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="UIStruct.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Util.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Validator.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
