--- a/TextRpgProject/TextRpgProject.vcxproj.filters
+++ b/TextRpgProject/TextRpgProject.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClCompile Include="SkillManager.cpp">
       <Filter>매니저</Filter>
     </ClCompile>
-    <ClCompile Include="GoldenGoblin.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Box.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -102,19 +99,10 @@
     <ClCompile Include="Cursor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Entity.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="FactoryManager.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="GameMap.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="InputBox.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Item.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="LogBox.cpp">
@@ -123,25 +111,10 @@
     <ClCompile Include="Object.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Pawn.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerManager.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Renderer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Singleton.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="TextBox.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="TradeManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Util.cpp">
@@ -150,6 +123,9 @@
     <ClCompile Include="Validator.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="GoldenGoblin.cpp">
+      <Filter>엔티티</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameManager.h">
@@ -157,12 +133,6 @@
     </ClInclude>
     <ClInclude Include="BattleManager.h">
       <Filter>매니저</Filter>
-    </ClInclude>
-    <ClInclude Include="Singleton.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Item.h">
-      <Filter>엔티티</Filter>
     </ClInclude>
     <ClInclude Include="Goblin.h">
       <Filter>엔티티</Filter>
@@ -191,9 +161,6 @@
     <ClInclude Include="MonsterType.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Random.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Skill.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -209,43 +176,7 @@
     <ClInclude Include="SkillManager.h">
       <Filter>매니저</Filter>
     </ClInclude>
-    <ClInclude Include="GoldenGoblin.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Box.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Container.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Cursor.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Entity.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="FactoryManager.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="GameMap.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="InputBox.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="LogBox.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Object.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Pawn.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Renderer.h">
@@ -254,20 +185,47 @@
     <ClInclude Include="struct.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="TextBox.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="TradeManager.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="UIStruct.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Util.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Validator.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Util.h">
+      <Filter>유틸리티</Filter>
+    </ClInclude>
+    <ClInclude Include="Box.h">
+      <Filter>유저인터페이스\박스</Filter>
+    </ClInclude>
+    <ClInclude Include="Cursor.h">
+      <Filter>유저인터페이스\박스</Filter>
+    </ClInclude>
+    <ClInclude Include="GameMap.h">
+      <Filter>유저인터페이스\박스</Filter>
+    </ClInclude>
+    <ClInclude Include="LogBox.h">
+      <Filter>유저인터페이스\박스</Filter>
+    </ClInclude>
+    <ClInclude Include="InputBox.h">
+      <Filter>유저인터페이스\박스</Filter>
+    </ClInclude>
+    <ClInclude Include="Container.h">
+      <Filter>유저인터페이스\박스</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>유저인터페이스\박스</Filter>
+    </ClInclude>
+    <ClInclude Include="Random.h">
+      <Filter>유틸리티</Filter>
+    </ClInclude>
+    <ClInclude Include="SingleTon.h">
+      <Filter>유틸리티</Filter>
+    </ClInclude>
+    <ClInclude Include="TextBox.h">
+      <Filter>유저인터페이스\박스</Filter>
+    </ClInclude>
+    <ClInclude Include="GoldenGoblin.h">
+      <Filter>엔티티</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
