--- a/TextRpgProject/TextRpgProject.vcxproj
+++ b/TextRpgProject/TextRpgProject.vcxproj
@@ -142,17 +142,16 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameMap.cpp" />
     <ClCompile Include="Goblin.cpp" />
+    <ClCompile Include="GoldenGoblin.cpp" />
     <ClCompile Include="Human.cpp" />
     <ClCompile Include="IceStorm.cpp" />
     <ClCompile Include="InputBox.cpp" />
-    <ClCompile Include="Item.cpp" />
     <ClCompile Include="LogBox.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mateor.cpp" />
     <ClCompile Include="MonsterManager.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Orc.cpp" />
-    <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SkillManager.cpp" />
     <ClCompile Include="Slime.cpp" />
@@ -175,16 +174,15 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameMap.h" />
     <ClInclude Include="Goblin.h" />
+    <ClInclude Include="GoldenGoblin.h" />
     <ClInclude Include="Human.h" />
     <ClInclude Include="InputBox.h" />
-    <ClInclude Include="Item.h" />
     <ClInclude Include="LogBox.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterManager.h" />
     <ClInclude Include="MonsterType.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Orc.h" />
-    <ClInclude Include="Pawn.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="SingleTon.h" />
