--- a/TextRpgProject/TextRpgProject.vcxproj.filters
+++ b/TextRpgProject/TextRpgProject.vcxproj.filters
@@ -243,4 +243,27 @@
       <Filter>매니저</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="head.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="monster_head.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="potion.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="power_button.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="store.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="sword.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+    <Text Include="title.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
